objects/EUR_ISP_AccountSku__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>AccountSkus (EU)</relationshipLabel>
        <relationshipName>AccountSkus_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_External_ID_Account_SKU__c</fullName>
        <inlineHelpText>You are not allowed to create an AccoountSku record with the same Account SF ID and SKU External ID as already exist.</inlineHelpText>
        <label>External ID Account &amp; SKU</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_ISP_SKU__c</fullName>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>AccountSkus (EU)</relationshipLabel>
        <relationshipName>AccountSkus_EU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>AccountSku (EU)</label>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>AccountSku ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountSkus (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>